--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
 # 必要なライブラリのインポート
-streamlit
-numpy
-pandas
 csv
-torch
-transformers
-transformers
 re
+streamlit==0.89.0
+numpy==1.21.0
+pandas==1.3.0
+torch==1.9.0
+transformers==4.8.2
